fix: add gap between chat box and input

--- a/seki-web/static/css/chat.css
+++ b/seki-web/static/css/chat.css
@@ -24,6 +24,7 @@
 .chat form {
   display: flex;
   gap: 0.25em;
+  margin-top: 0.35em;
 }
 .chat form input[type="text"] {
   flex: 1;
